--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,13 @@
 @import '@unocss/reset/tailwind.css';
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 @unocss all;
+
+@media print {
+    body {
+        margin: 0 !important;
+    }
+}
 
 :root {
     --wine-bg-color: #ebe5f5;
