feat: style CKEditor5

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,4 @@
 @import '@unocss/reset/tailwind.css';
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
 @unocss all;
 
 @media print {
@@ -10,7 +8,7 @@
 }
 
 :root {
-    --wine-bg-color: #ebe5f5;
+    --wine-bg-color: #ffffff;
 }
 
 .dark {
