--- a/src/mi.css
+++ b/src/mi.css
@@ -16,7 +16,8 @@
 
 html,
 body {
-    background: #f6f6f6;
+    accent-color: var(--accent-color);
+    background: #f6f6f6; /* this is basically support for old browsers */
     background: var(--background-color);
     color: #212121;
     color: var(--primary-color);
@@ -61,6 +62,7 @@ fieldset,
 blockquote {
     margin: 1em 0;
 }
+
 /*/
  * -------------------------------------------------- *
 /*/
@@ -152,6 +154,10 @@ textarea {
     outline: none;
     padding: 3px 7px;
     background: none;
+}
+
+fieldset {
+    padding-bottom: 8px;
 }
 
 button,
