--- a/src/mi.css
+++ b/src/mi.css
@@ -147,7 +147,7 @@ select,
 legend,
 fieldset,
 textarea {
-    color: white;
+    color: #212121;
     color: var(--primary-color);
     border: 1px solid #212121;
     border-color: var(--primary-color);
