--- a/src/mi.css
+++ b/src/mi.css
@@ -69,6 +69,10 @@ blockquote {
  * -------------------------------------------------- *
 /*/
 
+h3 {
+    color: var(--accent-color);
+}
+
 h1 a {
     text-decoration: none;
 }
