--- a/src/mi.css
+++ b/src/mi.css
@@ -6,7 +6,6 @@
  * mi.css reddit post:      https://www.reddit.com/r/webdev/comments/1jc2qlx/minimal_css_1kb_for_contentdriven_websites/
  */
 
-
 :root {
     --primary-color: #f6f6f6;
     --background-color: #101010;
@@ -20,6 +19,24 @@
 }
 
 /* 'You can remove these without thinking' section START */
+li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 2px 0;
+}
+
+li a {
+    min-width: 144px;
+}
+
+li span {
+    flex-grow: 1;
+    opacity: 65%;
+    font-size: 0.9em;
+}
+
 /* Don't show an underline for heading anchor tags */
 h1 a {
     text-decoration: none;
@@ -145,10 +162,6 @@ ol {
 li > ul,
 li > ol {
     padding: 0 1em;
-}
-
-li {
-    padding: 2px 0;
 }
 
 pre,
